2011-10-01  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Generic Translator texi2any/makeinfo): adapt to
	the new implementation in tp/.
	* configure.ac, tp/Makefile.am: add an automake conditional to avoid 
	doing tp tests if dependencies are missing.

2011-09-30  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (texi2any Output Customization), 
	doc/texi2oldapi.texi: archive the texi2any Output Customization
	chapter in texi2oldapi.texi.  Reduce the text in texinfo.txi
	to what should be stable.

2011-09-26  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (GNU Sample Texts): change example to be
	without cover texts, since that is by far the most common case.
	Update years.

2011-09-26  Patrice Dumas  <pertusus@free.fr>

	* Makefile.am (SUBDIRS, DIST_SUBDIRS), configure.ac, po*/POTFILES.in: 
	build and distribute the Parser in tp.  Don't build texi2html, but
	still distribute it.

2011-09-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Configuration Variables): comment out or
	remove variables the Parser doesn't have, per Patrice.

2011-09-23  Vincent Bela@^iche  <vincent.belaiche@gmail.com>

	* doc/texinfo.tex (\macroxxx): complain if more than 256 args
	and non-etex.
	(\parsemargdef, \defmacro): handle >= 10 args.
	Processing if <10 args is unchanged.
	(\parsemmanyargdef, \endargs@, \nil@, \nilm@, \nillm@,
	 \getargvals@, \getargvals@@, \push@, \macvalstoargs@,
	 \macargexpandinbody@, \putargsintokens@,
	 \texisavetoksstackpoint, \texirestoretoksstackpoint,
	 \texinonouternewtoks, \setemptyargvalues@,
	 \setemptyargvaluesparser@, \pop@, \longpop@): new macros.
	(\texiatcatcode): used to save and restore.

2011-09-21  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex: consistently use % rather than %% for comments.

2011-09-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Node Line Requirements): parens are 
	disallowed specifically when confused with external manuals,
	not always.  Discussion in thread of 18 Sep 2011 09:16:27,